# m5-stack-360-player

./: .gitattributes  .gitignore  README.md  platformio.ini  pyproject.toml
docs/ecn/: ECN-0001-potplayer-to-vlc-player.md  ECN-0002-force-equirectangular-projection.md
docs/hardware/: m5stickc-plus2-example-source.md
docs/plan/: tashan-loop-log.md  v1-index.md  v1-sensor-link.md  v2-index.md  v2-vlc-player.md  v3-index.md  v3-sensitivity-bounds.md
docs/prd/: PRD-0001-m5stickc-plus2-head-tracker.md  PRD-0002-vlc-360-player.md
docs/superpowers/plans/: 2026-07-02-m5stickc-plus2-sensor-link-implementation.md  2026-07-02-tk-visualizer-implementation.md
docs/superpowers/specs/: 2026-07-02-m5stickc-plus2-head-tracker-design.md  2026-07-02-tk-visualizer-design.md
firmware/m5stickc_plus2_sensor_link/src/: main.cpp
pc_receiver/: __init__.py  app.py  calibration.py  mp4_spherical_metadata.py  pose_control.py  recorder.py  telemetry.py  transport.py  virtual_mp4_server.py  visualization.py  visualizer_app.py  vlc_backend.py  vlc_player_app.py  vlc_player_config.py  vlc_viewpoint.py
tests/: test_calibration.py  test_firmware_static.py  test_jsonl_recorder.py  test_mp4_spherical_metadata.py  test_pose_control.py  test_python_runtime_policy.py  test_simulated_ble_flow.py  test_telemetry.py  test_virtual_mp4_server.py  test_visualization.py  test_vlc_player_config.py  test_vlc_player_controller.py  test_vlc_viewpoint.py
